--- a/css/chessboard.css
+++ b/css/chessboard.css
@@ -37,21 +37,21 @@
 
 /* white square */
 .white-1e1d7 {
-  background-color: #f0d9b5;
-  color: #b58863;
+  background-color: #ffffdd;
+  color: #86a666;
 }
 
 /* black square */
 .black-3c85d {
-  background-color: #b58863;
-  color: #f0d9b5;
+  background-color: #86a666;
+  color: #ffffdd;
 }
 
 /* highlighted square */
 .highlight1-32417, .highlight2-9c5d2 {
-  -webkit-box-shadow: inset 0 0 3px 3px yellow;
-  -moz-box-shadow: inset 0 0 3px 3px yellow;
-  box-shadow: inset 0 0 3px 3px yellow;
+  -webkit-box-shadow: inset 0 0 3px 3px #285a82;
+  -moz-box-shadow: inset 0 0 3px 3px #285a82;
+  box-shadow: inset 0 0 3px 3px #285a82;
 }
 
 /* notation */
