--- a/css/app.css
+++ b/css/app.css
@@ -1,21 +1,26 @@
 body {
-	background: #222222;
-	font-family: 'Helvetica';
-	color: #ffffff;
+    background: #222222;
+    font-family: 'Dosis', sans-serif;
+    color: #ffffff;
 }
 
 a {
-	color: #ffffff;
+    color: #ffffff;
+    text-decoration: none;
 }
 
-#footer {
-	margin: 0px auto;
-}
-
-#board {
-	margin: 0px auto;
+a:hover {
+    text-decoration: underline;
 }
 
 p {
-	text-align: center;
+    text-align: center;
+}
+
+#board {
+    margin: 0px auto;
+}
+
+#footer {
+    margin: 0px auto;
 }
